<resources>

    <!--全局-->
    <string name="app_name">ZUtils</string>
    <string name="please_Input_Name">请输入用户名</string>
    <string name="please_Input_Password">请输入密码</string>
    <string name="login">登录</string>
    <string name="unknown_error">发生未知错误</string>
    <string name="downloading">正在下载</string>
    <string name="last_version">已经是最新版本</string>


    <!-- 网络 -->
    <string name="network_connect_error">网络连接异常</string>
    <string name="network_connect_timeout">网络连接超时</string>
    <string name="no_route_to_host">无法连接到服务器</string>
    <string name="network_parse_error">数据解析异常</string>
    <string name="network_response_code_error">服务器状态码异常：</string>
    <string name="bad_network_view_tip">您的网络不给力，点击屏幕可重新加载</string>
    <string name="load_failed_click_to_reload">加载失败，点击可重新加载</string>

    <!-- 分享 -->
    <string name="share_to">分享到</string>
    <string name="wechat">微信</string>
    <string name="wechat_memory">微信朋友圈</string>
    <string name="qq_friends">QQ</string>
    <string name="qq_zone">QQ空间</string>
    <string name="weibo">微博</string>

    <!--转场动画-->
    <string name="big_pv">big_photoview</string>


</resources>
